# zero-trust

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
contracts/bot-nft/: Cargo.toml
contracts/bot-nft/src/: lib.rs
contracts/leaderboard/: Cargo.toml
contracts/leaderboard/src/: lib.rs
frontend/: .gitignore  env.example  idea.md  package-lock.json  package.json  wrangler.jsonc
frontend/.open-next/.build/durable-objects/: queue.js
frontend/.open-next/assets/: BUILD_ID
frontend/.open-next/cache/deZKQT2B92PjugarG5q03/: 500.cache  _not-found.cache  bot-creator.cache  bots.cache  defense.cache  index.cache  leaderboard.cache
frontend/.open-next/cloudflare/: cache-assets-manifest.sql  init.js  next-env.mjs
frontend/.open-next/dynamodb-provider/: dynamodb-cache.json
frontend/.open-next/middleware/: handler.mjs
frontend/.open-next/server-functions/default/: handler.mjs.meta.json  (+1 more)
frontend/src/app/: globals.css  layout.tsx  page.tsx  tailwind.config.ts
frontend/src/components/: bot-select-grid.tsx  charts-component.tsx  header.tsx  hud-corners.tsx  timeline-component.tsx  wallet-button.tsx
frontend/src/contracts/: bot_nft.ts  leaderboard.ts  verifier.ts
frontend/src/hooks/: useAvailableBots.ts  useBotSync.ts  useDeployBot.ts  useGameHub.ts  useLeaderboard.ts  useProver.ts  useVerifier.tsx  useWallet.ts
frontend/src/lib/: constants.ts  defense-types.ts  game-logic.ts  storage.ts  types.ts  utils.ts
zerotrust_zkvm/host/: Cargo.toml
zerotrust_zkvm/host/src/: image-id.rs  lib.rs  main.rs
zerotrust_zkvm/methods/guest/: Cargo.toml
(+138 files in other folders)
