[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "3.0.4", features = ["prove"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

stellar-xdr = {version="25.0.0", features = ["std", "curr"]}
stellar-strkey = "0.0.16"

actix-web = "4"
actix-cors = "0.7"

# HTTPS
reqwest = { version = "0.13", features = ["json"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"

# Crypto
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Utils
anyhow = "1"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"